[package]
name = "wifi_exporter_repose"
version = "0.2.1"
edition = "2024"
publish = false

[lib]
name = "wifi_exporter_repose"
crate-type = ["cdylib"]

[package.metadata.android]
package = "dev.mlm.wifi_exporter"
apk_name = "wifi_exporter"
build_targets = ["aarch64-linux-android"]
split_per_abi = true

[package.metadata.android.application]
label = "Wi‑Fi Exporter"
fullscreen = true

[dependencies]
anyhow = "1"
log = "0.4"
android_logger = "0.15"
jni = "0.21"
ndk = "0.9"
once_cell = "1.19"

repose-core = "0.6.4"
repose-ui = "0.6.4"
repose-platform = { version = "0.6.4", features = ["android"] }

winit = "0.30.12"
serde_json = "1"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1

[package.metadata.android.sdk]
version_code = 16777729
min_sdk_version = 26
target_sdk_version = 35
