[package]
name = "wifi_exporter_repose"
version = "0.3.5"
edition = "2024"
publish = false

[lib]
name = "wifi_exporter_repose"
crate-type = ["cdylib"]

[package.metadata.android]
package = "dev.mlm.wifi_exporter"
apk_name = "wifi_exporter"
build_targets = ["aarch64-linux-android"]
split_per_abi = true
resources = "packaging/res"

[package.metadata.android.application]
label = "WiFi Exporter"
fullscreen = true
icon = "@drawable/icon"

[dependencies]
anyhow = "1"
log = "0.4"
android_logger = "0.15"
jni = "0.21"
ndk = "0.9"
repose-core = "0.15"
repose-ui = "0.15"
repose-platform = { version = "0.15", features = ["android"] }

# repose-core = { path = "../repose/crates/repose-core" }
# repose-ui = { path = "../repose/crates/repose-ui" }
# repose-platform = { path = "../repose/crates/repose-platform", features = [
#     "android",
# ] }


winit = "0.30.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1

[package.metadata.android.sdk]
version_code = 16777989
min_sdk_version = 26
target_sdk_version = 35
